Add profiling and optimization
- Instead of calculating a matrix on each intersection I am
calculating it on creation